// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses Summary with 1 expense 1`] = `
<div>
  <h1>
     viewing 
    1
     
    expnese
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render expenses Summary with multiple expense 1`] = `
<div>
  <h1>
     viewing 
    23
     
    expenses
     totalling 
    $23,534,343,432.34
  </h1>
</div>
`;
